fixed a bug that timestamp is not getting log. Truncates the name for the img in explanations chosen and guess round. Moved the sign-in button next to the how to play button

--- a/frontend/src/components/Landing/Landing.module.scss
+++ b/frontend/src/components/Landing/Landing.module.scss
@@ -95,8 +95,8 @@
 
   &__btn {
     display: inline-block;
-    margin-top: 45px;
-    padding: 10px 24px;
+
+    padding: 8px 24px;
     background-color: #3AA757;
     text-decoration: none;
     text-align: right;
